syntax = "proto3";

package de.rennschnitzel.backbone.net.protocol;

import "ComponentUUID.proto";
import "NetworkProtocol.proto";

message LoginMessage {
	int32 protocolVersion = 1;
	oneof login {
		FirstLoginMessage first = 2;
		SecondLoginMessage second = 3;
	}
}

message FirstLoginMessage {
	repeated string namespaces = 1;
	ServerMessage.Type type = 2;
}

message SecondLoginMessage {
	UUID id = 1;
	repeated string namespaces = 2;
	ServerMessage.Type type = 3;		
}

message AuthChallengeMessage {
	bytes token = 1;
}

message AuthResponseMessage {
	bytes token = 1;
}

message AuthSuccessMessage {
	UUID cliendID = 1;
	RouterMessage router = 2;
	NetworkTopologyMessage network = 3;
}

message UpgradeMessage {
	ServerMessage client = 1;
}